# Database

./: .gitignore  README.md
backend/: .env  Cargo.toml
backend/src/: main.rs  structs.rs  tests.rs  ws_handler.rs
backend/src/websockets/: websockets.rs
docker/: db_setup.sh  db_setup_windows.bat
docker/mongodb-cluster/: docker-compose.yml
docs/uml/: access_doc_seq.puml
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  AuthContext.ts  AuthContextProvider.tsx  CreateGroup.tsx  CreateProject.tsx  Document.tsx  DocumentEditor.tsx  Login.tsx  ProjectList.tsx  Projects.tsx  WSContext.ts  WSContextProvider.tsx  api-util.ts  main.tsx  mockdata.ts
scripts/: create_ps_db.sql
