[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.2.1", features = ["cargo"] }
futures-util = "0.3.28"
redis = { version = "0.23.0", features = ["tokio-comp"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
mongodb = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
postgres = "0.19"
serde_json = "1.0"
axum = { version = "0.7.4", features = ["ws"] }
dotenvy = "0.15"
hyper = "1.6.0"
sqlx = {version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"]}
tower-http = {version = "0.6.4", features = ["cors"]}
